--- a/FA3_Tingson/style.css
+++ b/FA3_Tingson/style.css
@@ -1,7 +1,7 @@
 body {
-	background-image: url("calm meadow.jpg");
+	background-image: url("meadow.jpg");
 	background-repeat: no-repeat;
-	background-position: center 50px; 
+	background-position: center;  
 }
 
 h1{
@@ -12,6 +12,7 @@ h1{
 	border-width: 2px;
 	padding: 10px 15px 10px 15px;
 	width: 250px;
+	margin: 0 auto; 
 	margin-bottom: 20px;
 	background-color: #568469;
 }
@@ -25,6 +26,7 @@ p {
 	border-width: 3px;
 	border-style: dashed dotted double solid;
 	width: 500px;
+	margin: 0 auto; 
 }
 
 span {
@@ -33,4 +35,5 @@ span {
 	color: rgb(45,78,29);
 	margin-left: 2px;
 	margin-right: 5px;
+	margin: 0 auto; 
 }
